[package]
name = "pump-poly-router"
version = "0.1.0"
edition = "2021"
description = "Cross-chain prediction trade router: Pump.fun SPL tokens → Polymarket outcome positions"
license = "MIT OR Apache-2.0"

[features]
default = []

[[example]]
name = "route_trade"
required-features = []

[dependencies]
# Local Polymarket SDK
polymarket-client-sdk = { path = "../PolyRust/polymarket-client-sdk", features = ["clob", "ws"] }

# Solana
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }

# Async runtime + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
hex = "0.4"
bincode = "1.3"
shellexpand = "3.1"
# EVM signing — use libsecp256k1 already pulled in by solana-sdk (avoids zeroize conflict)
libsecp256k1 = "0.6"
sha3 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
